--- a/package.json
+++ b/package.json
@@ -5,21 +5,30 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "build:css": "postcss src/tailwind.css -o static/dist/tailwind.css",
+    "watch": "watch 'npm run build:css' ./components"
   },
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^1.2.0",
+    "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.18.0",
+    "cssnano": "^4.1.10",
     "next": "^8.1.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "watch": "^1.0.2"
   },
   "devDependencies": {
-    "@types/next": "^7.0.6",
+    "@types/next": "^8.0.5",
     "@types/react": "^16.4.16",
-    "@types/react-dom": "16.0.11",
-    "tailwindcss": "^1.0.0",
-    "typescript": "3.2.4"
+    "@types/react-dom": "^16.8.4",
+    "tailwindcss": "^1.0.1",
+    "typescript": "^3.4.5"
   },
-  "license": "ISC"
+  "license": "ISC",
+  "main": "index.js",
+  "repository": "https://github.com/raungreen/anvilAPI.git",
+  "author": "RaunG <raung@icloud.com>"
 }
