--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.18.0",
+    "create-next-app": "^0.5.9",
     "cssnano": "^4.1.10",
     "next": "^8.1.0",
+    "npm-gui": "^2.0.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "watch": "^1.0.2"
